# Crew_AI_Project_nypusAI

./: README.md
Marketing _Department/SEO_SEM_TEAM/seo_sem_crew/: README.md  pyproject.toml
Marketing _Department/SEO_SEM_TEAM/seo_sem_crew/src/seo_sem_crew/: ad_copy_task_report.md  analytics_monitoring_task_report.md  backlink_analysis_task_report.md  competitor_analysis_task_report.md  content_optimization_task_report.md  content_strategy_task_report.md  crew.py  internal_linking_task_report.md  keyword_research_task_report.md  main.py  main2.py  manager.py  meta_description_task_report.md  report.md  sem_campaign_management_task_report.md  seo_audit_task_report.md  seo_reporting_task_report.md
Marketing _Department/SEO_SEM_TEAM/seo_sem_crew/src/seo_sem_crew/config/: agents.yaml  tasks.yaml
