[project]
name = "seo_sem_crew"
version = "0.1.0"
description = "seo-sem-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "firecrawl-py>=1.12.0",
    "serpapi>=0.1.5",
]

[project.scripts]
seo_sem_crew = "seo_sem_crew.main:run"
run_crew = "seo_sem_crew.main:run"
train = "seo_sem_crew.main:train"
replay = "seo_sem_crew.main:replay"
test = "seo_sem_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
